--- a/index.html
+++ b/index.html
@@ -3,73 +3,77 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Text box</title>
+	<title>Text form</title>
+		<link rel="stylesheet" type="text/css" href="textStyle.css">
 </head>
 <body>
-	<h1 align="center" class="heading">TEXT BOX</h1>
+	<h1 align="center">Text Box</h1>
 	<div class="container" align="center">
 		<form class="textboxform">
-
-			<link rel="stylesheet" type="text/css" href="textStyle.css">
-
-
-			<label>Enter your text below</label>
+			<label>Enter your text</label>
 			<br><br>
-			<textarea id="text" rows="10" cols="70"onkeyup="updateInfo()" autofocus></textarea><br><br>
-			<button type="button" onclick="transformUpperCase()">UpperCase</button>
-			<button type="button" onclick="transformLowerCase()">LowerCase</button>
-			<button type="button" onclick="findtext()">FIND</button>
-			<button type="button" onclick="changeColor()">change color</button>
-			<button type="button" onclick="textUnderline()">underline</button>
-			<button type="button" onclick="copyText()">CopyTEXT</button>
+			<textarea id="text" rows="10" cols="70" onkeyup="updateinfo()" autofocus></textarea>
+
 			<br><br>
-			<h2 id="textinfo">This text contains 0  words and 0 characters</h2>
-		</form>
+			<button type="button" onclick="transformupperCase()">UpperCase</button>
+			<button type="button" onclick="transformlowerCase()">LowerCase</button>
+			<button type="button" onclick="findText()">Find</button>
+			<button type="button" onclick="changeColor()">Change color</button>
+			<button type="button" onclick="textUnderline()">Underline</button>
+			<button type="button" onclick="textbold()">Bold</button>
+			<br><br>
+
+			<h2 id="textInfo">This text containes 0 words and 0 characters</h2>
+		</form>		
 	</div>
+
 	<script type="text/javascript">
-		let text =document.getElementById("text");
-		let textInfo =document.getElementById("textInfo");
+		let text=document.getElementById("text");
+		let textInfo=document.getElementById("textInfo");
 		let clr;
 
-		function transformUpperCase(){
-			text.value = text.value.toUpperCase();
-
+		function transformupperCase(){
+			text.value=text.value.toUpperCase();
 		}
-		function transformLowerCase(){
-			text.value = text.value.toLowercase();
 
+		function transformlowerCase(){
+			text.value=text.value.toLowerCase();
 		}
 
 		function findText(){
-			let searchText = prompt("enter the text :");
-			if(text.value.includes"$(searchText)" is present);
-		{
-			alert(search text "${searchText}" is present);
-		}else {
-			alert(search text "${searchText}" is not present);
+			let searchText=prompt("Enter the text : ");
 
+			if(text.value.includes(searchText)){
+				alert(`search text "${searchText}" is present `);
+			}
+			else{
+				alert(`search text "${searchText}"is not present `);
+			}
 		}
-		}
-		
 		function changeColor(){
-			clr  = prompt(("enter your fav color :")toLowercase())
+			clr=prompt(("Enter your favourite color : ").toLowerCase());
 			text.style.color=clr;
-
 		}
 		function textUnderline(){
-			text.style.textDecoration = underline 2px solid ${clr}
-
+			text.style.textDecoration=`underline 2px solid ${clr}`;
 		}
-
-		function copytext(){
-			navigator.clipboard.writeText(text.value)
-		}
-
-		function updateInfo(){
-			let numberofWords = text.value.trim().split("").length
-
-			textInfo.innerHTML =` This text contains ${numberofwords}words and ${text.value.length}charcters`
+		function textbold() {
+        
+         var textElement = document.getElementById('text');
+             if (textElement.style.fontWeight === 'bold') 
+             {
+              textElement.style.fontWeight = 'normal';
+              }
+            else 
+            {
+               textElement.style.fontWeight = 'bold';
+             }
+}
+		function updateinfo(){
+			let numberofWords=text.value.trim().split(" ").length;
+			textInfo.innerHTML= `This text contains "${numberofWords}"  words and "${text.value.length}"  character `;
 		}
 	</script>
+
 </body>
 </html>
